syntax = "proto3";

package predict;

option go_package = "/grpc";

service Predictor {
  rpc Predict (PredictRequest) returns (PredictResponse);
  rpc PredictAll (PredictAllRequest) returns (PredictAllResponse);
}

message DataPoint {
  string date = 1;
  double co_imf1 = 2;
  double co_imf2 = 3;
  double co_imf3 = 4;
  double co_imf4 = 5;
  double target = 6;
}

message PredictRequest {
  repeated DataPoint data = 1;
}

message PredictResponse {
  double val = 1;
}

message PredictAllRequest{
  repeated DataPoint data = 1;
}

message PredictAllResponse{
  repeated double val = 1;
}